syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

message DeleteGroupBlacklistedUserRequest {
    int64 group_id = 1;
    int64 unblacklisted_user_id = 2;
}