syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

message CheckGroupJoinQuestionsAnswersRequest {
    map<int64, string> question_id_and_answer = 1;
}