syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

message DeleteGroupJoinQuestionRequest {
    int64 question_id = 1;
}