syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message QueryGroupJoinQuestionsRequest {
    int64 group_id = 1;
    bool with_answers = 2;
    google.protobuf.Int64Value last_updated_date = 3;
}
