syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message CreateGroupMemberRequest {
    int64 group_id = 1;
    int64 user_id = 2;
    google.protobuf.Int64Value mute_end_date = 3;
}