syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message QueryGroupMembersRequest {
    int64 group_id = 1;
    google.protobuf.Int64Value last_updated_date = 2;
    repeated int64 group_members_ids = 3;
    google.protobuf.BoolValue with_status = 4;
}