syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.request";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";

message UpdateGroupRequest {
    int64 group_id = 1;
    google.protobuf.StringValue group_name = 2;
    google.protobuf.StringValue intro = 3;
    google.protobuf.StringValue announcement = 4;
    google.protobuf.StringValue profile_picture_url = 5;
    google.protobuf.Int64Value group_type_id = 6;
    google.protobuf.Int64Value mute_end_date = 7;
    google.protobuf.Int64Value successor_id = 8;
    google.protobuf.BoolValue quit_after_transfer = 9;
}