syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.turms.pojo.response";
option java_multiple_files = true;

import "dto/group/group.proto";

message GroupWithVersion {
    int64 last_updated_date = 1;
    repeated Group group = 2;
}